fix: product header align fixed

--- a/src/assets/styles/components/product_container.css
+++ b/src/assets/styles/components/product_container.css
@@ -68,9 +68,10 @@
 
 .product-container #product-details {
   margin: 0.5rem 0;
+  width: 90%;
 }
 
-.product-container .info-product h4 {
+.product-subcontainer h4 {
   text-align: center;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 1rem;
